kubernetes/apps/base/media/arr/calibre/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre
  namespace: media
spec:
  selector:
    app: calibre
  ports:
    - name: http
      port: 8181
      targetPort: http
