kubernetes/apps/base/media/arr/calibre/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: calibre
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`calibre.${cluster_domain}`)
      kind: Rule
      services:
        - name: calibre
          port: 8083
